<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <ToggleButton android:id="@+id/service" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:textOn="@string/start_service"
        	android:textOff="@string/stop_service"/>
        	
	<TableLayout android:id="@+id/configTable" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:gravity="center_horizontal">
		<TableRow android:id="@+id/configRow" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:gravity="center">
		    <ToggleButton android:id="@+id/wifiControl" 
	            android:layout_width="160dp" 
	            android:layout_height="wrap_content"
	            android:textOn="@string/start_wifi"
	        	android:textOff="@string/stop_wifi"/>
	        	
       		<ToggleButton android:id="@+id/g3Control" 
	            android:layout_width="160dp"  
	            android:layout_height="wrap_content"
	            android:textOn="@string/start_3G"
	        	android:textOff="@string/stop_3G"/>	
		</TableRow>
		
		<TableRow android:id="@+id/configRow" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:gravity="center">
		    <ToggleButton android:id="@+id/wifiTracker" 
	            android:layout_width="160dp" 
	            android:layout_height="wrap_content"
	            android:textOn="@string/start_wifiTracker"
	        	android:textOff="@string/stop_wifiTracker"/>
	        	
	       <ToggleButton android:id="@+id/g3Tracker" 
	            android:layout_width="160dp" 
	            android:layout_height="wrap_content"
	            android:textOn="@string/start_3GTracker"
	        	android:textOff="@string/stop_3GTracker"/> 	  
		</TableRow>
	</TableLayout>
	<ScrollView android:id="@+id/txt_scrollview" 
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
     <TextView android:id="@+id/report" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:scrollbarAlwaysDrawVerticalTrack="true"/>
	</ScrollView>       	
</LinearLayout>
